--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<h1 class="white title">Upload an image to remove its background.</h1>
-	<p class="white">Just drop or browse a image and our super AI will do the rest.</p>
+	<p class="white">Just drop or browse a image and my super AI will do the rest.</p>
 	<div class="center">
 		<div class="upload">
 			<form id="formElement" method=post enctype=multipart/form-data class="upload-files">
