--- a/templates/results.html
+++ b/templates/results.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <h1>Result of our segementation</h1>
-<p>Thank you for using our product! Happy New Year!</p>
+<p>Thank you for using our product! Have a good day!</p>
 <div class="masonry">
   <div class="item">
     <div class="text">Before</div>
