--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,14 @@
 <head>
 	<link rel="stylesheet" href="/css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 
-	<title>Segementation</title>
+	<title>Image Segementation</title>
 </head>
 
 <body>
 	<h1 class="white title">Upload an image to remove its background.</h1>
-	<p class="white">Just drop or browse a image and my super AI will do the rest.</p>
+	<p class="white">Just drop or browse a image and my AI will do the rest.</p>
 	<div class="center">
 		<div class="upload">
 			<form id="formElement" method=post enctype=multipart/form-data class="upload-files">
